// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templateWithLoader exporting as a arrow function - without loader page: /blog/[post]/[...catchall] | loader: getServerSideProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default () => <div>Hello world</div>;

async function __Next_Translate__getServerSideProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/blog/[post]/[...catchall]\\",
        loaderName: \\"getServerSideProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getServerSideProps__88d9831a00__ as getServerSideProps };
"
`;

exports[`templateWithLoader exporting as a arrow function - without loader page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default () => <div>Hello world</div>;

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader exporting as a class - with loader page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
export default class Page extends React.Component {
  render() {
    return <div>Hello world</div>;
  }
}
function getStaticProps() {
  return { props: {} };
}

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader exporting as a class in a different line - without loader page: /blog/[post]/[...catchall] | loader: getServerSideProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
class Page extends React.Component {
  render() {
    return <div>Hello world</div>;
  }
}
const myPage = Page;
export default myPage;

async function __Next_Translate__getServerSideProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/blog/[post]/[...catchall]\\",
        loaderName: \\"getServerSideProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getServerSideProps__88d9831a00__ as getServerSideProps };
"
`;

exports[`templateWithLoader exporting as a class in a different line - without loader page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
class Page extends React.Component {
  render() {
    return <div>Hello world</div>;
  }
}
const myPage = Page;
export default myPage;

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader exporting as a function - with loader page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default function Page() {
  return <div>Hello world</div>;
}
export function getStaticPaths() {
  return {};
}
function getStaticProps() {
  return { props: {} };
}

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader exporting as a function - without loader page: /blog/[post]/[...catchall] | loader: getServerSideProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default function Page() {
  return <div>Hello world</div>;
}

async function __Next_Translate__getServerSideProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/blog/[post]/[...catchall]\\",
        loaderName: \\"getServerSideProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getServerSideProps__88d9831a00__ as getServerSideProps };
"
`;

exports[`templateWithLoader exporting as a function - without loader page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default function Page() {
  return <div>Hello world</div>;
}

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader exporting as a function in different line - with loader page: /index | loader: getServerSideProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
function Page() {
  return <div>Hello world</div>;
}
function getServerSideProps() {
  return { props: {} };
}
export {};
export default Page;

async function __Next_Translate__getServerSideProps__88d9831a00__(ctx) {
  const res = await getServerSideProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getServerSideProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getServerSideProps__88d9831a00__ as getServerSideProps };
"
`;

exports[`templateWithLoader exporting as a function in different line - without loader page: /blog/[post]/[...catchall] | loader: getServerSideProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
function Page() {
  return <div>Hello world</div>;
}
export default Page;

async function __Next_Translate__getServerSideProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/blog/[post]/[...catchall]\\",
        loaderName: \\"getServerSideProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getServerSideProps__88d9831a00__ as getServerSideProps };
"
`;

exports[`templateWithLoader exporting as a function in different line - without loader page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
function Page() {
  return <div>Hello world</div>;
}
export default Page;

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader loader as a arrow function page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default function Page() {
  return <div>Hello world</div>;
}
const getStaticProps = () => ({ props: {} });
export {};

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader loader as a wrapper page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default function Page() {
  return <div>Hello world</div>;
}
const getStaticProps = wrapper.getStaticProps(() => ({ props: {} }));
export {};

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader loader imported to another place page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import getStaticProps from \\"somewhere/getStaticProps\\";
import getStaticPaths from \\"somewhere/getStaticPaths\\";
const config = {};
export default function Page() {
  return <div>Hello world</div>;
}
export { config, getStaticPaths };

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader loader with named import to another place + rename page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import { getStaticPropsA as getStaticProps } from \\"somewhere/getStaticProps\\";
import { getStaticProps as getStaticPaths } from \\"somewhere/getStaticPaths\\";
const config = {};
export default function Page() {
  return <div>Hello world</div>;
}
export { config, getStaticPaths };

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader loader with named import to another place page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import { getStaticProps } from \\"somewhere/getStaticProps\\";
import { getStaticPaths } from \\"somewhere/getStaticPaths\\";
const config = {};
export default function Page() {
  return <div>Hello world</div>;
}
export { config, getStaticPaths };

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader loader with one named import to another place page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import {
  getStaticPaths,
  getStaticProps,
  config,
} from \\"somewhere/getStaticProps\\";
export default function Page() {
  const test = \\"getStaticProps\\";
  console.log(\\"This should log getStaticProps without any modification\\");
  return <div>Hello getStaticProps</div>;
}
export { config, getStaticPaths };

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should add "revalidate: 55" prop into getStaticProps page: /index | loader: getStaticProps | revalidate: 55 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
function Page() {
  return <div>Hello world</div>;
}
const getStaticProps = (ctx) => ({});
export default Page;

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    revalidate: 55,
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should allow developers to override revalidate prop per page, by having the "default" revalidate defined before "...res" page: /index | loader: getStaticProps | revalidate: 88 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default function Page() {
  return <div>Hello world</div>;
}
function getStaticProps() {
  return { revalidate: 10, props: { prop1: \\"hello\\" } };
}

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    revalidate: 88,
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should ignore not exported loader page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export default function Page() {
  return <div>Hello world</div>;
}
const getStaticProps = () => ({ props: {} });

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  return {
    props: {
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should import and use loader exported via "export { } from ..." page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
import { loader as __Next_Translate_old_getStaticProps__88d9831a00__ } from \\"somewhere\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
function Page() {
  return <div>Hello world</div>;
}
export {} from \\"somewhere\\";
export default Page;

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await __Next_Translate_old_getStaticProps__88d9831a00__(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should not add "revalidate" prop into getStaticProps because revalidate < 0 page: /index | loader: getStaticProps | revalidate: -1 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
function Page() {
  return <div>Hello world</div>;
}
const getStaticProps = (ctx) => ({});
export default Page;

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should not add "revalidate" prop into getStaticProps because revalidate = 0 page: /index | loader: getStaticProps | revalidate: 0 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
function Page() {
  return <div>Hello world</div>;
}
const getStaticProps = (ctx) => ({});
export default Page;

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should remove exports of existing loader with "as" #1 page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export { anotherThing };

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await test(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should remove exports of existing loaders with "as" #2 page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export {};

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await test(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should remove exports of existing loaders with "as" #3 page: /index | loader: getStaticProps 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
export { something, getStaticPropsB };

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await AgetStaticProps(ctx);
  return {
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;

exports[`templateWithLoader should use the revalidate value already present on getStaticProps arrow function page: /index | loader: getStaticProps | revalidate: 77 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __loadNamespaces from \\"next-translate/loadNamespaces\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import { GetStaticProps } from \\"next\\";
export default function Page() {
  return <div>Hello world</div>;
}
const getStaticProps: GetStaticProps = () => {
  return { revalidate: 10, props: { prop1: \\"hello\\" } };
};

async function __Next_Translate__getStaticProps__88d9831a00__(ctx) {
  const res = await getStaticProps(ctx);
  return {
    revalidate: 77,
    ...res,
    props: {
      ...(res.props || {}),
      ...(await __loadNamespaces({
        ...ctx,
        ...__i18nConfig,
        pathname: \\"/index\\",
        loaderName: \\"getStaticProps\\",
        loadLocaleFrom: (l, n) =>
          import(\`@next-translate-root/locales/\${l}/\${n}\`).then(
            (m) => m.default
          ),
      })),
    },
  };
}
export { __Next_Translate__getStaticProps__88d9831a00__ as getStaticProps };
"
`;
